# src/controllers/contacts.js
@@ -1,26 +1,29 @@
-import { getAllContacts, getContactsById, createContacts, deleteContact, updateContact } from "../services/contacts.js";
-import  createHttpError from 'http-errors';
-import { parsePaginationParams } from "../utils/parsePaginationParams.js";
-import { parseSortParams } from "../utils/parseSortParams.js";
-import { parseFilterParams } from "../utils/parseFilterParams.js";
-import { saveFileToUploadDir } from "../utils/saveFileToUploadDir.js";
-import { saveFileToCloudinary } from "../utils/saveFileToCloudinary.js";
-import { env } from "../utils/env.js";
+import {
+  getAllContacts,
+  getContactById,
+  createContact,
+  deleteContact,
+  updateContact,
+} from '../services/contacts.js';
+import { parsePaginationParams } from '../utils/parsePaginationParams.js';
+import createHttpError from 'http-errors';
+import { parseSortParams } from '../utils/parseSortParams.js';
+import { saveFileToUploadDir } from '../utils/saveFileToUploadDir.js';
+import { saveFileToCloudinary } from '../utils/saveFileToCloudinary.js';
+import { env } from '../utils/env.js';
 
-export const getContactsController = async (req, res, next) => {
+export const getAllContactsController = async (req, res) => {
   const { page, perPage } = parsePaginationParams(req.query);
   const { sortBy, sortOrder } = parseSortParams(req.query);
-  const filter = parseFilterParams(req.query);
-  const userId = req.user._id;
+  const userId = req.user._id; // Зміна: додано userId
 
-  const contacts = await getAllContacts(
+  const contacts = await getAllContacts({
     page,
     perPage,
     sortBy,
     sortOrder,
-    filter,
-    userId
-  );
+    userId, // Зміна: передано userId
+  });
 
   res.json({
     status: 200,
@@ -29,18 +32,18 @@ export const getContactsController = async (req, res, next) => {
   });
 };
 
-export const getContactsByIdController = async (req, res, next) => {
+export const getContactByIdController = async (req, res, next) => {
   const { contactId } = req.params;
-  const userId = req.user._id;
+  const userId = req.user._id; // Зміна: додано userId
 
-  const contact = await getContactsById(contactId, userId);
+  const contact = await getContactById(contactId, userId); // Зміна: передано userId
 
   if (!contact) {
     next(createHttpError(404, 'Contact not found'));
     return;
   }
 
-  res.status(200).json({
+  res.json({
     status: 200,
     message: `Successfully found contact with id ${contactId}!`,
     data: contact,
@@ -48,8 +51,9 @@ export const getContactsByIdController = async (req, res, next) => {
 };
 
 export const createContactController = async (req, res) => {
-  const userId = req.user._id;
+  const userId = req.user._id; // Зміна: додано userId
   const photo = req.file;
+
   let photoUrl;
 
   if (photo) {
@@ -60,7 +64,7 @@ export const createContactController = async (req, res) => {
     }
   }
 
-  const contact = await createContacts({...req.body, userId, photo: photoUrl});
+  const contact = await createContact({ ...req.body, photo: photoUrl }, userId); // Зміна: передано userId
 
   res.status(201).json({
     status: 201,
@@ -71,35 +75,27 @@ export const createContactController = async (req, res) => {
 
 export const deleteContactController = async (req, res, next) => {
   const { contactId } = req.params;
-  const userId = req.user._id;
-  const contact = await deleteContact(contactId, userId);
+  const userId = req.user._id; // Зміна: додано userId
+
+  const contact = await deleteContact(contactId, userId); // Зміна: передано userId
 
   if (!contact) {
     next(createHttpError(404, 'Contact not found'));
     return;
   }
-  res.status(204).json({
-            message: "Delete success"
-        }).send();
+
+  res.status(204).send();
 };
 
-export const updateContactController = async (req, res, next) => {
+export const upsertContactController = async (req, res, next) => {
   const { contactId } = req.params;
-  const userId = req.user._id;
-  const photo = req.file;
-  let photoUrl;
+  const userId = req.user._id; // Зміна: додано userId
 
-  if (photo) {
-    if (env('ENABLE_CLOUDINARY') === 'true') {
-      photoUrl = await saveFileToCloudinary(photo);
-    } else {
-      photoUrl = await saveFileToUploadDir(photo);
-    }
-  }
-
-  const result = await updateContact(contactId, req.body, {
-    upsert: true,
-  }, userId, photoUrl);
+  const result = await updateContact(
+    contactId,
+    { ...req.body, userId }, // Зміна: додано userId
+    { upsert: true },
+  );
 
   if (!result) {
     next(createHttpError(404, 'Contact not found'));
@@ -117,8 +113,9 @@ export const updateContactController = async (req, res, next) => {
 
 export const patchContactController = async (req, res, next) => {
   const { contactId } = req.params;
-  const userId = req.user._id;
+  const userId = req.user._id; // Зміна: додано userId
   const photo = req.file;
+
   let photoUrl;
 
   if (photo) {
@@ -132,7 +129,8 @@ export const patchContactController = async (req, res, next) => {
   const result = await updateContact(contactId, {
     ...req.body,
     photo: photoUrl,
-  }, userId);
+    userId, // Зміна: додано userId
+  });
 
   if (!result) {
     next(createHttpError(404, 'Contact not found'));
